TRS: Add initial template for Transparent Reader Support
We borrow the same design ideas from osdp_file.[ch] as that came out
pretty neatly without introducing any regressions to existing
functionality. So to enable TRS, do one of:

    cmake -DCONFIG_OSDP_TRS=on
    (or)
    configure.sh --enable-trs

Signed-off-by: Siddharth Chandrasekaran <sidcha.dev@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ option(CONFIG_OSDP_DATA_TRACE "Enable command/reply data buffer tracing" OFF)
 option(CONFIG_OSDP_SKIP_MARK_BYTE "Don't send the leading mark byte (0xFF)" OFF)
 option(CONFIG_DISABLE_PRETTY_LOGGING "Don't colorize log ouputs" OFF)
 option(CONFIG_OSDP_FILE "Enabled support for OSDP File Transfer" ON)
+option(CONFIG_OSDP_TRS "Enabled Transparent Reader Support" OFF)
 
 if (CONFIG_OSDP_PACKET_TRACE)
 	list(APPEND LIB_OSDP_DEFINITIONS "-DCONFIG_OSDP_PACKET_TRACE")
@@ -33,6 +34,10 @@ endif()
 
 if (CONFIG_OSDP_FILE)
 	list(APPEND LIB_OSDP_DEFINITIONS "-DCONFIG_OSDP_FILE")
+endif()
+
+if (CONFIG_OSDP_TRS)
+	list(APPEND LIB_OSDP_DEFINITIONS "-DCONFIG_OSDP_TRS")
 endif()
 
 # static and shared library names
@@ -65,6 +70,12 @@ endif()
 if (CONFIG_OSDP_FILE)
 	list(APPEND LIB_OSDP_SOURCES
 		${CMAKE_CURRENT_SOURCE_DIR}/osdp_file.c
+	)
+endif()
+
+if (CONFIG_OSDP_TRS)
+	list(APPEND LIB_OSDP_SOURCES
+		${CMAKE_CURRENT_SOURCE_DIR}/osdp_trs.c
 	)
 endif()
 
